Added logo and changed what we do

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Glooper</span> -
+
+                	<!-- <img src="img/glooper_labs.png" height="50px"/> -->
+                    <!-- <i class="fa fa-play-circle"></i> <span class="light">Glooper</span> - -->
                 </a>
             </div>
 
@@ -81,8 +83,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Understand Uncertainty</h1>
-                        <p class="intro-text">Glooper Helps you Understand the Market and make better Strategic Decisions<br/></p>
+                        <h1 class="brand-heading">Understand Change</h1>
+                        <p class="intro-text">Glooper Labs develops and implements mathematical models to help us understand how the world changes<br/></p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -97,8 +99,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Glooper</h2>
-                <p>Glooper is an automatically updating statistical and relational model of the UK business economy. It tells you how companies behave and enables you to understand what this means for your company or clients.</p>
-                <p>No longer is it required to manually lookup data from disparate news and market reports. Glooper helps you understand all your market, fast!
+                <p>Glooper Labs is a research led company that specialises in the development and implementation of mathematical models for dynamic systems. Originally formed out of the Entrepreneur first incubator in London, our initial projects focussed around financial modelling, identifying trends, and estimating company perfomance.
+                </p>
+                <p>Nowadays Glooper acts as an intermeditary between academia and industry with regards to the application of statistical methodology. In particular, we are active contributors and developers of open-source software for the analysis of dynamic systems. At Glooper we aim to help tackle some of the worlds most interesting challenges, from detecting cyber-attacks, to understanding the circuitary of the brain. 
                 </p>
             </div>
         </div>
