Removed some old stuff

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a class="page-scroll" href="#hiw">How it works</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#team">The Team</a>
                     </li>
@@ -107,7 +107,7 @@
         </div>
     </section>
     <!-- How it Works-->
-    <section id="hiw" class="hiw-section content-section text-center">
+    <!-- <section id="hiw" class="hiw-section content-section text-center">
             <div class="row">
 	            <div class="col-lg-8 col-lg-offset-2">
 	                <h2>How it Works</h2>
@@ -127,7 +127,7 @@
                 <img style="width:90%; padding:10px; display:block; background-color:#000;" src="img/screenshot.png" />
                 </div>
             </div>
-    </section>
+    </section> -->
 
     <!-- Download Section -->
     <section id="team" class="content-section text-center">
