--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>The Team</h2>
-                    <p>Glooper is based on 5 years of academic research into automated relationship extraction.</p>
+                    <p>Glooper is based on 5 years of academic research into dynamic graphical models.</p>
                    <!--  <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a> -->
                 </div>
                 <div class="row">
